fixed spacing on author page

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1971,6 +1971,10 @@ Usage (In Ghost editor):
     text-align: center;
 }
 
+h2.author-bio {
+    margin: 0 0 .5em;
+}
+
 .site-header-content .author-meta {
     z-index: 10;
     flex-shrink: 0;
